# ProjectEuler

./: CMakeLists.txt  README.md
scripts/: BuildLatestSolution.ps1  CreateNewSolution.ps1
scripts/template/: CMakeLists.txt  cmake_subdir_command.cmake  main.cpp  main.hpp
solutions/: util.hpp
solutions/0001/: CMakeLists.txt  main.cpp  main.hpp
solutions/0002/: CMakeLists.txt  main.cpp  main.hpp
solutions/0003/: CMakeLists.txt  main.cpp  main.hpp
solutions/0004/: CMakeLists.txt  main.cpp  main.hpp
solutions/0005/: CMakeLists.txt  main.cpp  main.hpp
solutions/0006/: CMakeLists.txt  main.cpp  main.hpp
solutions/0007/: CMakeLists.txt  main.cpp  main.hpp
solutions/0008/: CMakeLists.txt  main.cpp  main.hpp
solutions/0009/: CMakeLists.txt  main.cpp  main.hpp
solutions/0010/: CMakeLists.txt  main.cpp  main.hpp
solutions/0011/: CMakeLists.txt  main.cpp  main.hpp
solutions/0012/: CMakeLists.txt  main.cpp  main.hpp
solutions/0013/: CMakeLists.txt  main.cpp  main.hpp
solutions/0014/: CMakeLists.txt  main.cpp  main.hpp
solutions/0015/: CMakeLists.txt  main.cpp  main.hpp
solutions/0016/: CMakeLists.txt  main.cpp  main.hpp
solutions/0017/: CMakeLists.txt  main.cpp  main.hpp
solutions/0018/: CMakeLists.txt  main.cpp  main.hpp
solutions/0019/: CMakeLists.txt  main.cpp  main.hpp
solutions/0020/: CMakeLists.txt  main.cpp  main.hpp
solutions/0021/: CMakeLists.txt  main.cpp  main.hpp
